# ChakraCore

./: ChakraAutoConfigure.cmake
lib/Common/Core/: CMakeLists.txt
lib/Jsrt/: CMakeLists.txt  Jsrt.cpp  JsrtHelper.cpp  jsrtHelper.h
pal/src/: CMakeLists.txt
test/native-tests/test-char/: Platform.js
